<resources>
    <string name="app_name">WhatsApp Clone</string>
    <string name="menu_search">Procurar</string>
    <string name="menu_more">Opções</string>
    <string name="menu_voice_call">Chamada de Voz</string>
    <string name="menu_video_call">Chamada de Vídeo</string>
    <string name="menu_more_search">Pesquisar</string>
    <string name="menu_moreNewGroup">Novo grupo</string>
    <string name="menu_moreNewBroadCast">Nova transmissão</string>
    <string name="menu_moreWhatsCloneWeb">WhatsClone Web</string>
    <string name="menu_moreMessageFavorite">Mensagens favoritas</string>
    <string name="menu_moreConfig">Configurações</string>
    <string name="menu_moreAllMedia">Todas as mídias</string>
    <string name="menu_moreViewAllMedia">Mídia, links e docs</string>
    <string name="menu_moreShowMessage">Mostrar na conversa</string>
    <string name="menu_moreDefineFrom">Definir como…</string>
    <string name="menu_moreViewGallery">Ver na galeria</string>
    <string name="menu_moreChangePicture">Minha foto de perfil</string>
    <string name="menu_moreChangeGroupImage">Imagem do grupo</string>
    <string name="menu_moreChangeWallpaper">Papel de parede</string>
    <string name="menu_moreViewContactList">Ver na lista de contatos</string>
    <string name="menu_moreViewContact">Ver contato</string>
    <string name="menu_moreResetNotify">Redefinir configurações de notificações</string>
    <string name="view_image_error">Erro ao carregar a foto</string>
    <string name="userProfile_silence_notify">Silenciar notificações</string>
    <string name="userProfile_media_visibility">Mostrar mídia recém baixada desta conversa na galeria do seu telefone?</string>
    <string name="userProfile_block">Deseja bloquear %s? Contatos bloqueados não poderão mais ligar ou enviar mensagens para você.</string>
    <string name="userProfile_report">Deseja denunciar esse contato ao WhatsApp Clone?</string>
    <string name="userProfile_report_messages">As últimas mensagens recebidas desse usuário serão encaminhadas para o WhatsApp Clone</string>
    <string name="userProfile_check_report_user">Bloquear contato e apagar as mensagens desta conversa</string>
    <string name="userProfile_phone_copied">Número de telefone copiado</string>
    <string name="chatService_unBlock_user">Desbloquear %s para enviar uma mensagem.</string>
    <string name="TemporaryMessageAndLearnMore">Ao ativar esse recurso, novas mensagens desaparecerão dessa conversa após 7 dias. Os participantes da conversa ainda podem salvar essas mensagens em outros locais. <a href="https://duckduckgo.com/">Saiba Mais</a></string>
    <string name="CryptographyMessageAndLearnMore">Para confirmar que as mensagens e as chamadas com %s são protegidas com a criptografia de ponta a ponta, escaneie este código no aparelho do contato. Se preferir, você pode comparar o número acima. <a href="https://duckduckgo.com/">Saiba Mais</a></string>
    <string name="crypto_share_code">Utilize este código para verificar que as mensagens e as chamadas do WhatsApp Clone trocadas entre nós são protegidas com a criptografia de ponta a ponta: \n%s</string>
    <string name="crypto_scan_code_Caps">ESCANEAR CÓDIGO</string>
    <string name="crypto_scan_cam">Escaneie o código no telefone do seu contato</string>
    <string name="crypto_scan_wrong_contact">%s abriu \"Confirmar código de segurança\" para o número de telefone errado. Peça a %s para abrir o seu número de telefone.</string>
    <string name="view_image_remove_picture">Deseja apagar a mensagem?</string>
    <string name="view_image_check_remove_pic">Apagar os arquivos de mídia desta conversa</string>
    <string name="view_image_message_all_removed">Mensagem apagada</string>
    <string name="view_image_message_me_removed">Mensagem apagada para você</string>
    <string name="notify_personality">Usar notificações personalizadas</string>
    <string name="notify_messages">Notificações de mensagem</string>
    <string name="notify_calls">Notificações de chamadas</string>
    <string name="notify_sound">Som de notificação</string>
    <string name="notify_pop_up">Notificações de pop-up</string>
    <string name="notify_priority">Usar notificações de alta prioridade</string>
    <string name="notify_priority_preview">Mostrar prévia das notificações no topo da tela</string>
    <string name="notify_no_pop_up">Notificações pop-up não estão mais disponíveis para sua versão do Android</string>
    <string name="notify_choose_action">Escolher uma ação</string>
    <string name="popUp_no">Sem pop-up</string>
    <string name="popUp_on">Apenas com a tela \"ligada\"</string>
    <string name="popUp_off">Apenas com a tela \"desligada\"</string>
    <string name="popUp_ever">Sempre mostrar notificações</string>
    <string name="settings_account">Conta</string>
    <string name="settings_accountDescription">Privacidade, segurança, mudar número</string>
    <string name="settings_chat">Conversas</string>
    <string name="settings_chatDescription">Tema, papel de parede, histórico de conversas</string>
    <string name="settings_notify">Notificações</string>
    <string name="settings_notifyDescription">Mensagem, toques de grupos e chamadas</string>
    <string name="settings_data">Armazenamento e dados</string>
    <string name="settings_dataDescription">Uso de rede, download automático</string>
    <string name="settings_help">Ajuda</string>
    <string name="settings_helpDescription">FAQ, fale conosco, política de privacidade</string>
    <string name="error_image_upload">Ocorreu um erro ao enviar a imagem!</string>
    <string name="error_unexpected">Um erro inesperado foi detectado. Reinicie o aplicativo e tente novamente!</string>
    <string name="show_notify">Exibir notificações</string>
    <string name="light">Luz</string>
    <string name="light_null">Nenhuma</string>
    <string name="light_white">Branca</string>
    <string name="light_red">Vermelha</string>
    <string name="light_yellow">Amarela</string>
    <string name="light_purple">Roxa</string>
    <string name="green">Verde</string>
    <string name="cyan">Ciano</string>
    <string name="blue">Azul</string>
    <string name="eight_hours">8 horas</string>
    <string name="one_week">1 semana</string>
    <string name="always">Sempre</string>
    <string name="delete">Apagar</string>
    <string name="spin">Girar</string>
    <string name="share">Compartilhar</string>
    <string name="edit">Editar</string>
    <string name="you">Você</string>
    <string name="please_wait">Por favor aguarde…</string>
    <string name="loading">Carregando…</string>
    <string name="points">…</string>
    <string name="just_now">Agora mesmo</string>
    <string name="today">Hoje</string>
    <string name="yesterday">Ontem</string>
    <string name="time">00:00</string>
    <string name="remove">remover</string>
    <string name="removeCaps">REMOVER</string>
    <string name="removeForAllCaps">APAGAR PARA TODOS</string>
    <string name="removeForMeCaps">APAGAR PARA MIM</string>
    <string name="cancel">Cancelar</string>
    <string name="cancelCaps">CANCELAR</string>
    <string name="ok">ok</string>
    <string name="okCaps">OK</string>
    <string name="yes">Sim</string>
    <string name="yesCaps">SIM</string>
    <string name="no">Não</string>
    <string name="noCaps">NÃO</string>
    <string name="more">Mais</string>
    <string name="LearnMore">Saiba Mais</string>
    <string name="LearnMoreCaps">SAIBA MAIS</string>
    <string name="standard_yes">Padrão (Sim)</string>
    <string name="standard">Padrão</string>
    <string name="standardCaps">PADRÃO</string>
    <string name="save">Salvar</string>
    <string name="not_available">Não disponível</string>
    <string name="disabled">Desativadas</string>
    <string name="enabled">Ativadas</string>
    <string name="disable">Desativado</string>
    <string name="disableCaps">DESATIVADO</string>
    <string name="cellPhone">Celular</string>
    <string name="unBlock">Desbloquear</string>
    <string name="unBlockCaps">DESBLOQUEAR</string>
    <string name="block">Bloquear</string>
    <string name="blockCaps">BLOQUEAR</string>
    <string name="report">Denunciar</string>
    <string name="reportCaps">DENUNCIAR</string>
    <string name="reportContact">Denunciar contato</string>
    <string name="clearChat">Limpar conversa</string>
    <string name="exportChat">Exportar conversa</string>
    <string name="add_shortcut">Adicionar atalho</string>
    <string name="ringing">Toque</string>
    <string name="silence">Silêncio</string>
    <string name="vibration">Vibração</string>
    <string name="short_">Curto</string>
    <string name="long_">Longo</string>
    <string name="month">Mês</string>
    <string name="bio_january">%s de janeiro de %s</string>
    <string name="bio_february">%s de fevereiro de %s</string>
    <string name="bio_march">%s de março de %s</string>
    <string name="bio_april">%s de abril de %s</string>
    <string name="bio_may">%s de maio de %s</string>
    <string name="bio_june">%s de junho de %s</string>
    <string name="bio_july">%s de julho de %s</string>
    <string name="bio_august">%s de agosto de %s</string>
    <string name="bio_september">%s de setembro de %s</string>
    <string name="bio_october">%s de outubro de %s</string>
    <string name="bio_november">%s de novembro de %s</string>
    <string name="bio_december">%s de dezembro de %s</string>
    <string name="security_code">Código de segurança</string>
    <string name="InviteFriendsDescription">Olá,\n\nO WhatsApp Clone é um aplicativo rápido, simples e seguro que uso para conversar e ligar para amigos, familiares e muito mais.\n\nBaixe-o gratuitamente clicando em .:LINK OCULTO:.</string>
    <string name="profile_title">Perfil</string>
    <string name="profile_Name">Nome</string>
    <string name="profile_bio">Recado</string>
    <string name="profile_phone">Telefone</string>
    <string name="profile_SelectPicture">Selecione a imagem</string>
    <string name="profile_PictureRemove">Remover foto do perfil?</string>
    <string name="profile_PictureRemoved">Foto removida</string>
    <string name="profile_PictureRemovedError">Erro ao remover a foto</string>
    <string name="profile_ChangeName">Nome alterado com sucesso</string>
    <string name="profile_ChangeNameError">Erro ao alterar o nome</string>
    <string name="profile_ChangePicture">Foto alterada com sucesso</string>
    <string name="profile_ChangePictureError">Erro ao alterar a foto</string>
    <string name="profile_BottomPicture">Foto de perfil</string>
    <string name="profile_BottomEditName">Insira seu nome</string>
    <string name="profile_BottomRemovePicture">Remover\nfoto</string>
    <string name="profile_BottomGalleryPicture">Galeria</string>
    <string name="profile_BottomCamPicture">Câmera</string>
    <string name="fragmentChatsInviteFriends">Convide seus amigos</string>
    <string name="fragmentChatsNotFriends">Nenhum de seus contatos está usando o \nWhatsApp Clone. Use o botão abaixo para convidá-los.</string>
    <string name="fragmentChatsBtnInviteFriends">Convidar amigos</string>
    <string name="fragmentChatsInviteFriendsDescription">Converse com seus amigos que usam o WhatsApp Clone no iPhone, Android ou KaiOS phone</string>
    <string name="authPhoneTitle">Digite seu número de telefone</string>
    <string name="authPhoneDescription">O WhatsApp Clone enviará um SMS para verificar o seu número de telefone.</string>
    <string name="authPhoneWhatNumber">Qual é o meu número?</string>
    <string name="authPhoneRate">Podem ser aplicadas taxas de SMS da operadora</string>
    <string name="authPhoneCode">Digite o código</string>
    <string name="authPhoneNext">Próximo</string>
    <string name="authPhoneNumber">Número de telefone</string>
    <string name="authPhoneCodeEd">Cod.</string>
</resources>