<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_video_call"
        android:icon="@drawable/ic_baseline_videocam_24"
        android:title="@string/menu_video_call"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_voice_call"
        android:icon="@drawable/ic_baseline_call_24"
        android:title="@string/menu_voice_call"
        app:showAsAction="ifRoom"/>
    <group
        android:id="@+id/menu_more">
        <item
            android:id="@+id/action_view_contact"
            android:title="@string/menu_moreViewContact"/>
        <item
            android:id="@+id/action_view_all_media"
            android:title="@string/menu_moreViewAllMedia"/>
        <item
            android:id="@+id/action_search"
            android:title="@string/menu_more_search"/>
        <item
            android:id="@+id/action_silence_notify"
            android:title="@string/userProfile_silence_notify"/>
        <item
            android:id="@+id/action_change_wallpaper"
            android:title="@string/menu_moreChangeWallpaper"/>
        <item
            android:id="@+id/sub_menu_more"
            android:title="@string/more">
            <menu>
                <item
                    android:id="@+id/action_report"
                    android:title="@string/report"/>
                <item
                    android:id="@+id/action_block"
                    android:title="@string/block"/>
                <item
                    android:id="@+id/action_clear_chat"
                    android:title="@string/clearChat"/>
                <item
                    android:id="@+id/action_export_chat"
                    android:title="@string/exportChat"/>
                <item
                    android:id="@+id/action_add_shortcut"
                    android:title="@string/add_shortcut"/>
            </menu>
        </item>
    </group>
</menu>