<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/radio_group_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_disable_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                tools:ignore="RtlSymmetry"
                android:text="@string/light_null"
                android:textSize="16sp"
                android:checked="true"
                android:onClick="onRadioBtnLightClicked"/>

            <RadioButton
                android:id="@+id/radio_white_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                tools:ignore="RtlSymmetry"
                android:text="@string/light_white"
                android:textSize="16sp"
                android:onClick="onRadioBtnLightClicked"/>

            <RadioButton android:id="@+id/radio_red_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                tools:ignore="RtlSymmetry"
                android:text="@string/light_red"
                android:textSize="16sp"
                android:onClick="onRadioBtnLightClicked"/>

            <RadioButton android:id="@+id/radio_yellow_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                tools:ignore="RtlSymmetry"
                android:text="@string/light_yellow"
                android:textSize="16sp"
                android:onClick="onRadioBtnLightClicked"/>

            <RadioButton android:id="@+id/radio_green_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                tools:ignore="RtlSymmetry"
                android:text="@string/green"
                android:textSize="16sp"
                android:onClick="onRadioBtnLightClicked"/>

            <RadioButton android:id="@+id/radio_cyan_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                tools:ignore="RtlSymmetry"
                android:text="@string/cyan"
                android:textSize="16sp"
                android:onClick="onRadioBtnLightClicked"/>

            <RadioButton android:id="@+id/radio_blue_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                tools:ignore="RtlSymmetry"
                android:text="@string/blue"
                android:textSize="16sp"
                android:onClick="onRadioBtnLightClicked"/>

            <RadioButton android:id="@+id/radio_purple_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                tools:ignore="RtlSymmetry"
                android:text="@string/light_purple"
                android:textSize="16sp"
                android:onClick="onRadioBtnLightClicked"/>

        </RadioGroup>

    </LinearLayout>

</FrameLayout>
