<?xml version="1.0" encoding="utf-8"?>
<layout>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.activities.auth.PhoneLoginActivity">

        <LinearLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:text="@string/authPhoneTitle"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:tint="@android:color/black"
                android:src="@drawable/ic_baseline_more_vert_24"/>

        </LinearLayout>

        <LinearLayout
            android:layout_below="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="@string/authPhoneDescription"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/authPhoneWhatNumber"
                android:textStyle="bold"
                android:layout_marginBottom="15dp"
                android:textColor="@color/colorAccent"/>

            <Spinner
                android:id="@+id/spinner_country"
                android:layout_width="200dp"
                android:layout_marginBottom="15dp"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="+"/>

                <EditText
                    android:id="@+id/edit_code_country"
                    android:layout_width="57dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="5"
                    android:maxLines="1"
                    android:hint="@string/authPhoneCodeEd"/>

                <EditText
                    android:id="@+id/edit_phone"
                    android:layout_marginBottom="15dp"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:hint="@string/authPhoneNumber"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:text="@string/authPhoneRate"
                android:layout_marginBottom="15dp"/>

            <EditText
                android:visibility="gone"
                android:id="@+id/edit_code"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:maxLength="6"
                android:inputType="number"
                android:hint="@string/authPhoneCode"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:padding="15dp"
            android:background="@color/colorText"
            android:textColor="@color/colorBackGround"
            android:text="@string/authPhoneNext"/>

    </RelativeLayout>
</layout>

