<?xml version="1.0" encoding="utf-8"?>
<layout>

    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".menu.CallsFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:id="@+id/ln_invite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragmentChatsInviteFriends"
                android:textSize="25sp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorTextGray"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="30dp"
                android:text="@string/fragmentChatsNotFriends"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:background="@color/colorText"
                android:textColor="@color/colorBackGround"
                android:layout_marginBottom="30dp"
                android:text="@string/fragmentChatsBtnInviteFriends"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="30dp"
                android:text="@string/fragmentChatsInviteFriendsDescription"/>

        </LinearLayout>

    </FrameLayout>

</layout>