<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/radio_group_pop_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_disable_pop_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                tools:ignore="RtlSymmetry"
                android:text="@string/popUp_no"
                android:textSize="16sp"
                android:checked="true"
                android:onClick="onRadioBtnPopUpClicked"/>

            <RadioButton
                android:id="@+id/radio_on_pop_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                tools:ignore="RtlSymmetry"
                android:text="@string/popUp_on"
                android:textSize="16sp"
                android:onClick="onRadioBtnPopUpClicked"/>

            <RadioButton android:id="@+id/radio_off_pop_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                tools:ignore="RtlSymmetry"
                android:text="@string/popUp_off"
                android:textSize="16sp"
                android:onClick="onRadioBtnPopUpClicked"/>

            <RadioButton android:id="@+id/radio_ever_pop_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                tools:ignore="RtlSymmetry"
                android:text="@string/popUp_ever"
                android:textSize="16sp"
                android:onClick="onRadioBtnPopUpClicked"/>

        </RadioGroup>

    </LinearLayout>

</FrameLayout>
